<resources>
    <string name="app_name">PokeApi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Generation One</string>
    <string name="menu_slideshow">Generation Two</string>
    <string name="menu_tools">Generation Three</string>
    <string name="menu_share">Generation Four</string>
    <string name="menu_send">Favourites</string>
</resources>
