<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_favourite"
            android:title="@string/menu_home"
            android:numericShortcut="0"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_number_1"
            android:title="@string/menu_gallery"
            android:numericShortcut="1"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_number_2"
            android:title="@string/menu_slideshow"
            android:numericShortcut="2"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_number_3"
            android:title="@string/menu_tools"
            android:numericShortcut="3"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_number_4"
            android:title="@string/menu_share"
            android:numericShortcut="4"/>
    </group>

</menu>
