<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pokeapi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/nav_to_pokemon"
            app:destination="@id/placeholder"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.pokeapi.ui.one.GenerationOneFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.pokeapi.ui.two.GenerationTwoFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.pokeapi.ui.three.GenerationThreeFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.pokeapi.ui.four.GenerationFourFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/placeholder"
        android:name="com.example.pokeapi.ui.pokemon.PokemonFragment"
        android:label="Pokemon"
        tools:layout="@layout/pokemon_view_fragment" />

</navigation>